Support JDK 16